src/test/compile-fail/bad-module.rs
// error-pattern: unresolved import
import vec;

fn main() { let foo = vec::len([]); }
